--- a/Take Flight/user.html
+++ b/Take Flight/user.html
@@ -3,6 +3,13 @@
     <head>
         <title>Account</title>
         <link rel="stylesheet" href="userStyle.css">
+        <script type="module">
+            // Imports the functions you need from the SDKs you need
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+            import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-analytics.js";
+          </script>
+          <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app-compat.js"></script>
+          <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore-compat.js"></script>
     </head>
     <body>
         <nav class="navbar">
@@ -22,28 +29,30 @@
                     </li>
                 </ul> <br><br>
         </nav>
-        <form>
+        <form class="user-form">
             <!-- Age -->
             <p>You must be 21+ to create an account</p>
             <label for="birthday">Enter your birthday</label>
-            <input type="date" id="birthday" name="birthday" max="2000-01-01"> <br>
+            <input type="date" id="birthday" class="dateOfBirth" name="dateOfBirth" max="2000-01-01"> <br>
 
             <!-- Enter name -->
             <label for="fullName">Enter your first & last name</label>
-            <input type="text" id="fullName" fullName="fullName"> <br>
+            <input type="text" id="fullName" class="fullName" name="fullName"> <br>
 
             <!-- Username -->
             <label for="username">Create a username</label>
-            <input type="text" id="username" username="username"> <br>
+            <input type="text" id="username" class="username" name="username"> <br>
 
             <!-- Password -->
             <label for="pwd">Create a password</label>
-            <input type="password" id="pwd" name="pwd"> <br>
+            <input type="password" class="password" id="pwd" name="pwd"> <br>
 
             <!-- Submit to save info -->
-            <button type="button" class="accbtn">Create account</button>
+            <button class="btn create-account" type="submit">Create Account</button>
 
         </form>
+        <script src="firebase/firebase.js"></script>
+        <script src="js/user.js"></script>
     </body>
     <!-- name, bday, username, password -->
 </html>
