--- a/Take Flight/flight.html
+++ b/Take Flight/flight.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
+    <link rel="stylesheet" type="text/css" href="flightFormStyle.css">
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="module">
       // Imports the functions you need from the SDKs you need
@@ -11,13 +16,26 @@
     <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore-compat.js"></script>
   </head>
     <body>
+
+      <nav>
+        <a href="#"><img src="profile.png" alt="Profile"> PROFILE</a>
+        <a href="#"><img src="flights.png" alt="Flights"> FLIGHTS</a>
+        <a href="#"><img src="create.png" alt="Create"> CREATE</a>
+        <a href="#"><img src="drinks.png" alt="Drinks"> DRINKS</a>
+    </nav>
+
+    <div class="divider"></div>
+
+    <div class="header">
+        <img src="2p.png" alt="A beautiful landscape">
+        <h1>PREPARE TO TAKE FLIGHT</h1>
+        <img src="2p.png" alt="A beautiful landscape">
+    </div>
+
+    <div class="divider"></div>
+
+
       <form class="flight-form">
-        <div class="header">
-          <img src="images/flights.png" alt="A beautiful landscape">
-          <h1>PREPARE TO TAKE FLIGHT</h1>
-        </div>
-        <br>
-        <div class="divider"></div>
           
           <!-- Flight name -->
           <label for="flightName">What do you want to name your flight?</label>
