Sixth commit: UPDATED FORM

--- a/Take Flight/flight.html
+++ b/Take Flight/flight.html
@@ -17,7 +17,7 @@
     <body>
 
       <nav>
-        <a href="#"><img src="profile.png" alt="Profile"> PROFILE</a>
+        <a href="http://127.0.0.1:5500/Take%20Flight/user.html#"><img src="profile.png" alt="Profile"> PROFILE</a>
         <a href="#"><img src="flights.png" alt="Flights"> FLIGHTS</a>
         <a href="#"><img src="create.png" alt="Create"> CREATE</a>
         <a href="#"><img src="drinks.png" alt="Drinks"> DRINKS</a>
@@ -57,19 +57,19 @@
           <label for="veryStrong">Very Strong</label>
           <div class="divider"></div>
 
-          <!-- Alcohol -->
+          <!-- Strength of drinks -->
           <p>Select your base liquor(s):</p>
-          <input type="checkbox" id="option1" class="liq-vodka" name="option1" value="Vodka">
+          <input type="radio" id="option1" class="liq-vodka" name="selectedAlcohol" value="Vodka">
           <label for="option1">Vodka</label><br>
-          <input type="checkbox" id="option2" class="liq-rum" name="option2" value="Rum">
+          <input type="radio" id="option2" class="liq-rum" name="selectedAlcohol" value="Rum">
           <label for="option2">Rum</label><br>
-          <input type="checkbox" id="option3" class="liq-tequila" name="option3" value="Tequila">
+          <input type="radio" id="option3" class="liq-tequila" name="selectedAlcohol" value="Tequila">
           <label for="option3">Tequila</label><br>
-          <input type="checkbox" id="option4" class="liq-whiskey" name="option4" value="Whiskey"> 
+          <input type="radio" id="option4" class="liq-whiskey" name="selectedAlcohol" value="Whiskey"> 
           <label for="option4">Whiskey</label><br>    
-          <input type="checkbox" id="option5" class="liq-gin" name="option5" value="Gin">
+          <input type="radio" id="option5" class="liq-gin" name="selectedAlcohol" value="Gin">
           <label for="option5">Gin</label><br>    
-          <input type="checkbox" id="option6" class="liq-brandy" name="option6" value="Brandy">
+          <input type="radio" id="option6" class="liq-brandy" name="selectedAlcohol" value="Brandy">
           <label for="option6">Brandy</label><br>
           <div class="divider"></div>
       
