--- a/Take Flight/flight.html
+++ b/Take Flight/flight.html
@@ -19,9 +19,9 @@
       <nav>
         <a href="http://127.0.0.1:5500/Take%20Flight/user.html#"><img src="profile.png" alt="Profile"> PROFILE</a>
         <a href="#"><img src="flights.png" alt="Flights"> FLIGHTS</a>
-        <a href="#"><img src="create.png" alt="Create"> CREATE</a>
-        <a href="#"><img src="drinks.png" alt="Drinks"> DRINKS</a>
-    </nav>
+        <a href="http://127.0.0.1:5500/Take%20Flight/flight.html#"><img src="create.png" alt="Create"> CREATE</a>
+        <a href="http://127.0.0.1:5500/Take%20Flight/drinks.html#"><img src="drinks.png" alt="Drinks"> DRINKS</a>
+      </nav>
 
     <div class="divider"></div>
 
