--- a/Take Flight/fetchdrinks.html
+++ b/Take Flight/fetchdrinks.html
@@ -8,7 +8,7 @@
 <body>
 
     <label for="liquorCategory">Select Liquor Category:</label>
-    <select id="liquorCategory">
+    <select id="liquorCategory" onchange="saveToSessionStorage()">
         <option value="gin">Gin</option>
         <option value="vodka">Vodka</option>
         <option value="brandy">Brandy</option>
@@ -18,44 +18,26 @@
     </select>
 
     <label for="amount">Enter Amount of Drinks:</label>
-    <input type="number" id="amount" min="1" value="1">
-
-    <button onclick="fetchDrinks()">Get Drinks</button>
+    <input type="number" id="amount" min="1" value="1" onchange="saveToSessionStorage()">
 
     <div id="result"></div>
 
-
     <script>
+        function saveToSessionStorage() {
+            const numDrinksInput = document.getElementById('amount').value;
+            const alcoholInputs = document.getElementById('liquorCategory').value;
+
+            sessionStorage.setItem('numDrinksInput', numDrinksInput);
+            sessionStorage.setItem('alcoholInputs', alcoholInputs);
+
+            fetchDrinks();
+        }
+
         function fetchDrinks() {
-            // Retrieve values from sessionStorage
-            const numDrinksInput = sessionStorage.getItem('numDrinksInput');
-            const alcoholInputs = sessionStorage.getItem('alcoholInputs');
+            const category = sessionStorage.getItem('alcoholInputs');
+            const amount = sessionStorage.getItem('numDrinksInput') || 1;
 
-
-
-            // Set the retrieved values to the respective elements
-            document.getElementById('amount').value = numDrinksInput || 1;
-
-            // If alcoholInputs is present in sessionStorage, set the selected value
-            if (alcoholInputs) {
-                document.getElementById('liquorCategory').value = alcoholInputs;
-            }
-
-            const category = document.getElementById('liquorCategory').value;
-            const amount = document.getElementById('amount').value;
-
-            // Define the API URLs for each liquor category
-            const apiUrls = {
-                gin: 'https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=gin',
-                vodka: 'https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=vodka',
-                brandy: 'https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=brandy',
-                whiskey: 'https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=whiskey',
-                tequila: 'https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=tequila',
-                rum: 'https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=rum'
-            };
-
-            // Select the appropriate URL based on the user's choice or the stored value
-            const apiUrl = apiUrls[category || alcoholInputs];
+            const apiUrl = `https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=${category}`;
 
             fetch(apiUrl)
                 .then(response => response.json())
@@ -87,7 +69,6 @@
             resultContainer.appendChild(ul);
         }
 
-        // Call fetchDrinks on page load
         fetchDrinks();
     </script>
 
