linked to flight.js

--- a/Take Flight/flight.html
+++ b/Take Flight/flight.html
@@ -89,6 +89,6 @@
       
         </form>
       <script src="firebase/firebase.js"></script>
-      <script src="js/main.js"></script>
+      <script src="js/flight.js"></script>
     </body>
 </html>
