--- a/Take Flight/fetchdrinks.html
+++ b/Take Flight/fetchdrinks.html
@@ -1,49 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
+    <title> Take Flight - Create Flight</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktail Selector</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
+    <nav>
+        <a href="http://127.0.0.1:5500/Take%20Flight/user.html#"><img src="images/profile.png" alt="Profile"> PROFILE</a>
+        <a href="#"><img src="images/flights.png" alt="Flights"> FLIGHTS</a>
+        <a href="http://127.0.0.1:5500/Take%20Flight/flight.html#"><img src="images/create.png" alt="Create"> CREATE</a>
+        <a href="http://127.0.0.1:5500/Take%20Flight/drinks.html#"><img src="images/drinks.png" alt="Drinks"> DRINKS</a>
+      </nav>
 
-    <label for="liquorCategory">Select Liquor Category:</label>
-    <select id="liquorCategory" onchange="saveToSessionStorage()">
-        <option value="gin">Gin</option>
-        <option value="vodka">Vodka</option>
-        <option value="brandy">Brandy</option>
-        <option value="whiskey">Whiskey</option>
-        <option value="tequila">Tequila</option>
-        <option value="rum">Rum</option>
-    </select>
+    <div class="divider"></div>
+
+    <div class="header">
+        <h1>ARE YOU READY TO TAKE FLIGHT</h1>
+    </div>
+
+    <div class="divider"></div>
+
+    <!-- Flight name -->
+    <label for="flightName">What do you want to name your flight?</label>
+    <input type="text" class="flight-name" id="flightName" name="flightName"> <br>
+    <div class="divider"></div>
+
+    <p>Select your base liquor(s):</p>
+    <input type="radio" id="option1" class="liq-vodka" name="selectedAlcohol" value="Vodka" onchange="saveToSessionStorage()">
+    <label for="option1">Vodka</label><br>
+    <input type="radio" id="option2" class="liq-rum" name="selectedAlcohol" value="Rum" onchange="saveToSessionStorage()">
+    <label for="option2">Rum</label><br>
+    <input type="radio" id="option3" class="liq-tequila" name="selectedAlcohol" value="Tequila" onchange="saveToSessionStorage()">
+    <label for="option3">Tequila</label><br>
+    <input type="radio" id="option4" class="liq-whiskey" name="selectedAlcohol" value="Whiskey" onchange="saveToSessionStorage()"> 
+    <label for="option4">Whiskey</label><br>    
+    <input type="radio" id="option5" class="liq-gin" name="selectedAlcohol" value="Gin" onchange="saveToSessionStorage()">
+    <label for="option5">Gin</label><br>    
+    <input type="radio" id="option6" class="liq-brandy" name="selectedAlcohol" value="Brandy" onchange="saveToSessionStorage()">
+    <label for="option6">Brandy</label><br>
+    <div class="divider"></div>
+    
+    
 
     <label for="amount">Enter Amount of Drinks:</label>
-    <input type="number" id="amount" min="1" value="1" onchange="saveToSessionStorage()">
+    <input type="number" id="amount" min="3" value="3" onchange="saveToSessionStorage()">
+    <div class="divider"></div>
 
     <div id="result"></div>
 
     <script>
-        function saveToSessionStorage() {
-            const numDrinksInput = document.getElementById('amount').value;
-            const alcoholInputs = document.getElementById('liquorCategory').value;
+function saveToSessionStorage() {
+    const flightName = document.getElementById('flightName').value;
+    const numDrinksInput = document.getElementById('amount').value;
+    const selectedAlcohol = document.querySelector('input[name="selectedAlcohol"]:checked');
+    const alcoholInputs = selectedAlcohol.value;
 
-            sessionStorage.setItem('numDrinksInput', numDrinksInput);
-            sessionStorage.setItem('alcoholInputs', alcoholInputs);
+    sessionStorage.setItem('flightName', flightName);
+    sessionStorage.setItem('numDrinksInput', numDrinksInput);
+    sessionStorage.setItem('alcoholInputs', alcoholInputs);
+    sessionStorage.setItem('selectedAlcohol', selectedAlcohol);
 
-            fetchDrinks();
-        }
+
+    fetchDrinks();
+}
 
         function fetchDrinks() {
             const category = sessionStorage.getItem('alcoholInputs');
-            const amount = sessionStorage.getItem('numDrinksInput') || 1;
+            const amount = sessionStorage.getItem('numDrinksInput') || 3;
 
             const apiUrl = `https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=${category}`;
 
             fetch(apiUrl)
                 .then(response => response.json())
                 .then(data => {
-                    const drinks = data.drinks.slice(0, amount);
-                    displayDrinks(drinks);
+                    const drinks = data.drinks;
+                    shuffleArray(drinks); // Randomizes drinks
+                    const selectedDrinks = drinks.slice(0, amount);
+                    displayDrinks(selectedDrinks);
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
@@ -51,22 +87,39 @@
         }
 
         function displayDrinks(drinks) {
-            const resultContainer = document.getElementById('result');
-            resultContainer.innerHTML = '';
+    const resultContainer = document.getElementById('result');
+    resultContainer.innerHTML = '';
 
-            if (drinks.length === 0) {
-                resultContainer.innerHTML = 'No drinks found.';
-                return;
+    if (drinks.length === 0) {
+        resultContainer.innerHTML = 'No drinks found.';
+        return;
+    }
+
+    const flightName = sessionStorage.getItem('flightName') || 'Your Flight';
+    const selectedStrength = sessionStorage.getItem('drinks_strength');
+
+    // Display flightName as a heading
+    const heading = document.createElement('h2');
+    heading.textContent = flightName;
+    resultContainer.appendChild(heading);
+
+    const ul = document.createElement('ul');
+    drinks.forEach(drink => {
+        const li = document.createElement('li');
+        li.textContent = drink.strDrink;
+        ul.appendChild(li);
+    });
+
+    resultContainer.appendChild(ul);
+}
+
+
+        // Function to shuffle an array
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
             }
-
-            const ul = document.createElement('ul');
-            drinks.forEach(drink => {
-                const li = document.createElement('li');
-                li.textContent = drink.strDrink;
-                ul.appendChild(li);
-            });
-
-            resultContainer.appendChild(ul);
         }
 
         fetchDrinks();
