Tenth commit: UPDATED STYLING

--- a/Take Flight/fetchdrinks.html
+++ b/Take Flight/fetchdrinks.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
+<form>
 <body>
     <nav>
         <a href="http://127.0.0.1:5500/Take%20Flight/user.html#"><img src="images/profile.png" alt="Profile"> PROFILE</a>
@@ -50,7 +51,7 @@
     <div class="divider"></div>
 
     <div id="result"></div>
-
+</form>
     <script>
 function saveToSessionStorage() {
     const flightName = document.getElementById('flightName').value;
