Eleventh commit: CLEANED UP CODE, FIXED STYLING, ADDED STYLING

--- a/Take Flight/drinks.html
+++ b/Take Flight/drinks.html
@@ -17,7 +17,7 @@
     <body>
         <nav>
             <a href="http://127.0.0.1:5500/Take%20Flight/user.html#"><img src="images/profile.png" alt="Profile"> PROFILE</a>
-            <a href="#"><img src="images/flights.png" alt="Flights"> FLIGHTS</a>
+            <a href="http://127.0.0.1:5500/Take%20Flight/fetchdrinks.html#"><img src="images/flights.png" alt="Flights"> FLIGHTS</a>
             <a href="http://127.0.0.1:5500/Take%20Flight/flight.html#"><img src="images/create.png" alt="Create"> CREATE</a>
             <a href="http://127.0.0.1:5500/Take%20Flight/drinks.html#"><img src="images/drinks.png" alt="Drinks"> DRINKS</a>
           </nav>
